--- a/index.html
+++ b/index.html
@@ -187,13 +187,7 @@
                                 <div class="col mb-5 mb-md-0 h-100">
                                     <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
                                     <h2 class="h5">Team</h2>
-                                    <p class="mb-0">Our team is composed of professionally registered engineers. Electrical, Electronics and Mechanical engineers with broad experiences./Grounding solutions plus others.</p>
-                                </div>
-
-                                <div class="col mb-5 h-100">
-                                    <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-bullseye"></i></div>
-                                    <h2 class="h5">Aims</h2>
-                                    <p class="mb-0">We aim to offer turn-key engineering consulting services to our clients and advice on all aspects of electric vehicle charging.</p>
+                                    <p class="mb-0">Our team is composed of professionally registered engineers. Electrical, Electronics and Mechanical engineers with broad experiences</p>
                                 </div>
 
                             </div>
@@ -206,28 +200,28 @@
                         <section class="py-5 bg-light text-dark" id="features">
                             <div class="container px-5 my-5 bg-light">
                                 <div class="row gx-5">
-                                    <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">What do we offer.</h2></div>
+                                    <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">We offer turn-key engineering consulting services to our clients and advice on all aspects of electric vehicle charging.</h2></div>
                                     <div class="col-lg-8">
                                         <div class="row gx-5 row-cols-1 row-cols-md-2">
                                             <div class="col mb-5 h-100">
                                                 <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-battery-charging"></i></div>
                                                 <h2 class="h5">Planning</h2>
-                                                <p class="mb-0">Our dedicated team carries out all stages of the design process, from feasibility studies, surveys and design to install and commissioning..</p>
+                                                <p class="mb-0">Location, Charger type, Power requirements.</p>
                                             </div>
                                             <div class="col mb-5 h-100">
                                                 <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-bullseye"></i></div>
                                                 <h2 class="h5">Specification</h2>
-                                                <p class="mb-0">TExt on electrical stuff.</p>
+                                                <p class="mb-0">Project, Design and Technical Specifications.</p>
                                             </div>
                                             <div class="col mb-5 mb-md-0 h-100">
                                                 <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
                                                 <h2 class="h5">Designing</h2>
-                                                <p class="mb-0">Electrical equipment, EV charging cabling, Earthing/Grounding solutions plus others</p>
+                                                <p class="mb-0">Electrical design, Installation details.</p>
                                             </div>
                                             <div class="col h-100">
                                                 <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-app"></i></div>
                                                 <h2 class="h5">Suppying and installation</h2>
-                                                <p class="mb-0">Guidance and recomendations on choosing the right electric vehicles</p>
+                                                <p class="mb-0">Charge points, Charging cables, Electrical equipment, Accessories, Groundwork and Civils, Testing and Commissioning</p>
                                             </div>
                                         </div>
                                     </div>
