--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white text-anchor">
                                         <h1>UEV Solutions.</h1>
-                                        <p>Ultimate Electric Vehicle Solutions.</p>
                                         <p><a class="btn btn-lg btn-success" href="contact.html">Contact Us</a></p>
                                     </div>
                                 </div>
@@ -122,7 +121,6 @@
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white text-anchor">
                                         <h1>Solutions.</h1>
-                                        <p></p>
                                         <p><a class="btn btn-lg btn-success" href="solutions.html">Learn more</a></p>
                                     </div>
                                 </div>
@@ -134,7 +132,6 @@
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white text-anchor">
                                         <h1>Services.</h1>
-                                        <p> </p>
                                         <p><a class="btn btn-lg btn-success" href="services.html">Learn more</a></p>
                                     </div>
                                 </div>
@@ -147,7 +144,6 @@
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white">
                                         <h1>FAQs.</h1>
-                                        <p> </p>
                                         <p><a class="btn btn-lg btn-success" href="faq.html">Learn more</a></p>
                                     </div>
                                 </div>
@@ -181,7 +177,7 @@
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-battery-charging"></i></div>
                                     <h2 class="h5">Who we are</h2>
-                                    <p class="mb-0">UEV Solutions is a pioneer of electric vehicle charging solutions. We provide comprehensive EV infrastructure consultancy services for domestic, commercial and public sector clients. We are able to support, advise and develop EV charging strategies and installations. 
+                                    <p class="mb-0">Ultimate Electric Vehicle (UEV) Solutions is a pioneer of electric vehicle charging solutions. We provide comprehensive EV infrastructure consultancy services for domestic, commercial and public sector clients. We are able to support, advise and develop EV charging strategies and installations. 
                                 </div>
 
                                 <div class="col mb-5 mb-md-0 h-100">
@@ -189,6 +185,8 @@
                                     <h2 class="h5">Team</h2>
                                     <p class="mb-0">Our team is composed of professionally registered engineers. Electrical, Electronics and Mechanical engineers with broad experiences</p>
                                 </div>
+
+
 
                             </div>
                         </div>
