--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-battery-charging"></i></div>
                                     <h2 class="h5">Who we are</h2>
-                                    <p class="mb-0">Ultimate Electric Vehicle (UEV) Solutions is a pioneer of electric vehicle charging solutions. We provide comprehensive EV infrastructure consultancy services for domestic, commercial and public sector clients. We are able to support, advise and develop EV charging strategies and installations. 
+                                    <p class="mb-0">Ultimate Electric Vehicle Solutions is a pioneer of electric vehicle charging solutions. We provide comprehensive EV infrastructure consultancy services for domestic, commercial and public sector clients. We are able to support, advise and develop EV charging strategies and installations. 
                                 </div>
 
                                 <div class="col mb-5 mb-md-0 h-100">
