--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white text-anchor">
-                                        <h1>Solutions.</h1>
+                                        <h1>Our Solutions.</h1>
                                         <p><a class="btn btn-lg btn-success" href="solutions.html">Learn more</a></p>
                                     </div>
                                 </div>
@@ -131,7 +131,7 @@
                         
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white text-anchor">
-                                        <h1>Services.</h1>
+                                        <h1>Our Services.</h1>
                                         <p><a class="btn btn-lg btn-success" href="services.html">Learn more</a></p>
                                     </div>
                                 </div>
