--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                 <div class="row gx-5">
                                     <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">We offer turn-key engineering consulting services to our clients and advice on all aspects of electric vehicle charging.</h2></div>
                                     <div class="col-lg-8">
-                                        <div class="row gx-5 row-cols-1 row-cols-md-2">
+                                        <div class="row gx-7 row-cols-1 row-cols-md-2">
                                             <!-- <div class="col mb-5 h-100">
                                                 <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-battery-charging"></i></div>
                                                 <h2 class="h5">Planning</h2>
@@ -222,10 +222,10 @@
                                                 <p class="mb-0">Charge points, Charging cables, Electrical equipment, Accessories, Groundwork and Civils, Testing and Commissioning</p>
                                             </div> -->
 
-                                            <div class="row gx-2 row-cols-1 row-cols-md-2">
+                                            <div class="row gx-1 row-cols-1 row-cols-md-2">
                                                     <div class="col mb-5">
                                                         <div class="card">
-                                                            <img src="..." class="card-img-top" alt="...">
+                                                            <img src="assets/img/evc/wt/img_30.jpg" class="card-img-top" alt="...">
                                                             <div class="card-body">
                                                             <h5 class="card-title">Planning</h5>
                                                             <p class="card-text">Location, Charger type, Power requirements.</p>
@@ -234,47 +234,41 @@
                                                     </div>
                                             </div>
 
-                                            <div class="row gx-2 row-cols-1 row-cols-md-2">
+                                            <div class="row gx-1 row-cols-1 row-cols-md-2">
                                                 <div class="col mb-5">
                                                     <div class="card">
-                                                        <img src="..." class="card-img-top" alt="...">
+                                                        <img src="assets/img/evc/wt/img_31.jpg" class="card-img-top" alt="...">
                                                         <div class="card-body">
                                                         <h5 class="card-title">Specification</h5>
                                                         <p class="card-text">Project, Design and Technical Specifications</p>
                                                         </div>
                                                     </div>
                                                 </div>
-                                        </div>
+                                            </div>
 
-                                        <div class="row gx-2 row-cols-1 row-cols-md-2">
-                                            <div class="col mb-5">
-                                                <div class="card">
-                                                    <img src="..." class="card-img-top" alt="...">
-                                                    <div class="card-body">
-                                                    <h5 class="card-title">Designing</h5>
-                                                    <p class="card-text">Electrical design, Installation details.</p>
+                                            <div class="row gx-2 row-cols-1 row-cols-md-2">
+                                                <div class="col mb-5">
+                                                    <div class="card">
+                                                        <img src="assets/img/evc/wt/img_32.jpg" class="card-img-top" alt="...">
+                                                        <div class="card-body">
+                                                        <h5 class="card-title">Designing</h5>
+                                                        <p class="card-text">Electrical design, Installation details.</p>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                    </div>
 
-                                    <div class="row gx-2 row-cols-1 row-cols-md-2">
-                                        <div class="col mb-5">
-                                            <div class="card">
-                                                <img src="..." class="card-img-top" alt="...">
-                                                <div class="card-body">
-                                                <h5 class="card-title">Supplying and Installation</h5>
-                                                <p class="card-text">Charge points, Charging cables, Electrical equipment, Accessories, Groundwork and Civils, Testing and Commissioning.</p>
+                                            <div class="row gx-2 row-cols-1 row-cols-md-2">
+                                                <div class="col mb-5">
+                                                    <div class="card">
+                                                        <img src="assets/img/evc/img_16.jpg" class="card-img-top" alt="...">
+                                                        <div class="card-body">
+                                                        <h5 class="card-title">Supplying and Installation</h5>
+                                                        <p class="card-text">Charge points, Charging cables, Electrical equipment, Accessories, Groundwork and Civils, Testing and Commissioning.</p>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                </div>
-
-
-
-
-
-
 
 
                                         </div>
