--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
                                             <div class="row gx-1 row-cols-1 row-cols-md-2">
                                                     <div class="col mb-5">
-                                                        <div class="card">
+                                                        <div class="card bg-warning text">
                                                             <img src="assets/img/evc/wt/img_30.jpg" class="card-img-top" alt="...">
                                                             <div class="card-body">
                                                             <h5 class="card-title">Planning</h5>
@@ -236,10 +236,10 @@
 
                                             <div class="row gx-1 row-cols-1 row-cols-md-2">
                                                 <div class="col mb-5">
-                                                    <div class="card">
+                                                    <div class="card bg-primary text-white ">
                                                         <img src="assets/img/evc/wt/img_31.jpg" class="card-img-top" alt="...">
                                                         <div class="card-body">
-                                                        <h5 class="card-title">Specification</h5>
+                                                        <h5 class="card-title">Specifications</h5>
                                                         <p class="card-text">Project, Design and Technical Specifications</p>
                                                         </div>
                                                     </div>
@@ -248,7 +248,7 @@
 
                                             <div class="row gx-2 row-cols-1 row-cols-md-2">
                                                 <div class="col mb-5">
-                                                    <div class="card">
+                                                    <div class="card bg-danger text-white">
                                                         <img src="assets/img/evc/wt/img_32.jpg" class="card-img-top" alt="...">
                                                         <div class="card-body">
                                                         <h5 class="card-title">Designing</h5>
@@ -260,10 +260,10 @@
 
                                             <div class="row gx-2 row-cols-1 row-cols-md-2">
                                                 <div class="col mb-5">
-                                                    <div class="card">
+                                                    <div class="card bg-success text-white">
                                                         <img src="assets/img/evc/img_16.jpg" class="card-img-top" alt="...">
                                                         <div class="card-body">
-                                                        <h5 class="card-title">Supplying and Installation</h5>
+                                                        <h5 class="card-title">Supplying and Installations</h5>
                                                         <p class="card-text">Charge points, Charging cables, Electrical equipment, Accessories, Groundwork and Civils, Testing and Commissioning.</p>
                                                         </div>
                                                     </div>
