--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <div class="text-center">
-                        <h2 class="fw-bolder">We offer turn-key engineering consulting services to our clients and advice on all aspects of electric vehicle charging.</h2>
+                        <h2 class="fw-bolder">We offer engineering consulting services to our clients and advice on all aspects of electric vehicle charging.</h2>
                         <p class="lead fw-normal text-muted mb-5"></p>
                     </div>
                     <div class="row gx-5 justify-content-center">
@@ -274,7 +274,7 @@
 
       
                                     <!-- Features section-->
-                                    <section class="py-5 bg-light text-dark" id="features">
+                                    <section class="py-5 bg-dark text-dark" id="features">
                                         <div class="container px-5 my-5 bg-light">
                                             <div class="row gx-5">
                                                 <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">1.</h2></div>
