--- a/solutions.html
+++ b/solutions.html
@@ -43,7 +43,7 @@
                         <div class="col-lg-8 col-xxl-6">
                             <div class="text-center my-5">
                                 <h1 class="fw-bolder mb-3">Our Solutions.</h1>
-                                <p class="lead fw-normal text-white-50 mb-4">Coming Soon</p>
+                                <p class="lead fw-normal text-white-50 mb-4">We specialise in EV charging infrastructure consulting and project management services. Our services package is flexible and can be tailored to the client’s requirement. Be it “Design and Supply”, “Supply And Install” or the full “Turnkey Solution”</p>
                             </div>
                         </div>
                     </div>
@@ -51,33 +51,6 @@
             </header>
 
 
-
-            <!-- Features section-->
-            <section class="py-5 bg-dark text-white" id="features">
-                <div class="container px-5 my-5 bg-dark">
-                    <div class="row gx-5">
-                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">What is UEV Solutions.</h2></div>
-                        <div class="col-lg-8">
-                            <div class="row gx-5 row-cols-1 row-cols-md-2">
-                                <div class="col mb-5 h-100">
-                                    <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-battery-charging"></i></div>
-                                    <h2 class="h5">Who we are</h2>
-                                    <p class="mb-0">Ultimate Electric Vehicle Solutions is a pioneer of electric vehicle charging solutions. We provide comprehensive EV infrastructure consultancy services for domestic, commercial and public sector clients. We are able to support, advise and develop EV charging strategies and installations. 
-                                </div>
-
-                                <div class="col mb-5 mb-md-0 h-100">
-                                    <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                                    <h2 class="h5">Team</h2>
-                                    <p class="mb-0">Our team is composed of professionally registered engineers. Electrical, Electronics and Mechanical engineers with broad experiences</p>
-                                </div>
-
-
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
 
 
 
