--- a/index.html
+++ b/index.html
@@ -173,13 +173,14 @@
             <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <div class="text-center">
-                        <h2 class="fw-bolder">We offer engineering consulting services to our clients and advice on all aspects of electric vehicle charging.</h2>
+                        <h2 class="fw-bolder">Please find our Business Profile below.</h2>
                         <p class="lead fw-normal text-muted mb-5"></p>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid mb-1 px-8" src="assets/img/svg/bfplan.svg" style='height: 100%; width: 100%; ' alt="..." />
+                                <!-- <img class="img-fluid mb-1 px-8" src="assets/img/svg/bfplan.svg" style='height: 100%; width: 100%; ' alt="..." /> -->
+                                <iframe src="https://drive.google.com/file/d/1ECf6YnKquEPMA13W1APy4cSaTLSGbONU/preview" width="640" height="480" allow="autoplay"></iframe>
                             </div>
                         </div>
                     </div>
