--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <!-- <img class="img-fluid mb-1 px-8" src="assets/img/svg/bfplan.svg" style='height: 100%; width: 100%; ' alt="..." /> -->
-                                <iframe src="https://drive.google.com/file/d/1ECf6YnKquEPMA13W1APy4cSaTLSGbONU/preview" width="640" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1ECf6YnKquEPMA13W1APy4cSaTLSGbONU/preview" width="100%" height="480" allow="autoplay"></iframe>
                             </div>
                         </div>
                     </div>
